# personal-blog

./: .containerignore  .gitignore  .gitmodules  .golangci.yml  .tmux-window.sh  AGENTS.md  Containerfile  Dockerfile  Makefile  VIBES.md  buf.gen.yaml  build-and-deploy.sh  build.sh  compose.test.yaml  compose.yaml  config.toml  deploy.sh  deployment-service-ingress.yaml  extract_tree.py  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.js
.github/workflows/: ci.yml
assets/css/: cc-stats.css  redacted.css
assets/js/: live-status.js  live-status.test.js
content/: claude-log.md
content/blog/: .joy-of-building.md.swp  .mirace-of-building.md.swp  boredom.md  claude-code-sessions.md  first-post.md  first.md  fix-that-bug-now.md  gpl-climate.md  joy-of-building.md  lay-it-down.md  making-sense.md  mirace-of-building.md  optimized-oven.md  shared-experience.md  tech-solutions  tech-solutions.md  usns-comfort.md
content/posts/: my-first-post.md
data/: cc_sessions.json
docs/: claug-migration-deploy.md
public/: 404.html  index.html  index.xml  site.webmanifest  sitemap.xml
scripts/: maintenance.sh
scripts/plots/: bloom_bits_per_element.py  bloom_fpr_preview.py  bloom_fpr_vs_cost.py  bloom_fpr_vs_memory.py  bloom_memory_savings.py  bloom_optimal_k.py  fix-bug-effort.py  pyproject.toml
scripts/plots/examples/: effort_comparison.py  temperature_control.py  training_loss.py
scripts/plots/src/timberline_plots/: __init__.py  charts.py  style.py  theme.py
site/: AGENTS.md  config.toml  example_card.html  extract_tree.py  readme.md
(+177 files in other folders)
